<resources>
    <string name="app_name">WhatsApp Status Saver</string>
    <string name="nav_header_title">WhatsApp Status</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">WhatsApp Status</string>
    <string name="menu_gallery">Saved Status</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_settings">Settings</string>
    <string name="saved_to_gallery">Saved to gallery</string>
    <string name="deleted">Deleted</string>
    <string name="refreshed">Refreshed</string>
    <string name="share_to">Share images to..</string>
    <string name="dark_mode">Dark mode</string>
    <string name="empty_message">You have no saved statuses yet! save some and click refresh</string>
    <string name="empty_message1">You have no statuses yet! go to <b>WhatsApp</b>, open statuses then click refresh</string>
    <string name="enable_notifications">Turn on notifications</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="general_header">General</string>
    <string name="display_settings_header">Display</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>
